--- a/docker-compose-non-dev.yml
+++ b/docker-compose-non-dev.yml
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-x-superset-image: &superset-image apache/superset:${TAG:-latest-dev}
+x-superset-image: &superset-image
 x-superset-depends-on: &superset-depends-on
   #- db
   - redis
@@ -34,7 +34,7 @@ services:
 
   superset:
     env_file: docker/.env-non-dev
-    image: *superset-image
+    image: public.ecr.aws/z4y8w0t4/superset-custom:v1
     container_name: superset_app
     command: ["/app/docker/docker-bootstrap.sh", "app-gunicorn"]
     user: "root"
@@ -45,7 +45,7 @@ services:
     volumes: *superset-volumes
 
   superset-init:
-    image: *superset-image
+    image: public.ecr.aws/z4y8w0t4/superset-custom:v1
     container_name: superset_init
     command: ["/app/docker/docker-init.sh"]
     env_file: docker/.env-non-dev
@@ -56,7 +56,7 @@ services:
       disable: true
 
   superset-worker:
-    image: *superset-image
+    image: public.ecr.aws/z4y8w0t4/superset-custom:v1
     container_name: superset_worker
     command: ["/app/docker/docker-bootstrap.sh", "worker"]
     env_file: docker/.env-non-dev
@@ -68,7 +68,7 @@ services:
       test: ["CMD-SHELL", "celery inspect ping -A superset.tasks.celery_app:app -d celery@$$HOSTNAME"]
 
   superset-worker-beat:
-    image: *superset-image
+    image: public.ecr.aws/z4y8w0t4/superset-custom:v1
     container_name: superset_worker_beat
     command: ["/app/docker/docker-bootstrap.sh", "beat"]
     env_file: docker/.env-non-dev
